tests/negative/test_switch_expr_not_integral.orb
fnc main() {
    switch("abcd") {
    else: ret;
    }
}